syntax = "proto3";

package hello;

option go_package = ".;proto";

import "google/protobuf/empty.proto";
import "base.proto";

service HelloService{
  rpc Ping(google.protobuf.Empty) returns (Pong);
}

message Hello {
  string name = 1;
  int32 age = 2;
  repeated string tags = 3;
  map<string, int32> scores = 4;
  optional bool is_active = 5;
}

//protoc --go_out=. --go-grpc_out=. hello.proto
